fixed alignment and added if looking from a small device that an image is same width as info box

--- a/src/css/MovieDetail.css
+++ b/src/css/MovieDetail.css
@@ -75,16 +75,13 @@
 }
 
 @media only screen and (max-width:800px) {
-   .card,.card-col{
-        width: 50%;
+   .card,.card-col,.image-container,.image-container img{
+        width: 100%;
     }
     .image-container{
-        width: 200px
+        object-fit: fill;
     }
-    .image-container img{
-        width: 100%;
-        height: 100%;
-    }
+
 
 .image-container:hover .poster{
     height: 100%;
